@@ -1,3 +1,9 @@
+Fri Jul 31 13:42:29 BST 1998  Adam D. Moss  <adam@gimp.org>
+
+	* plug-ins/psd/psd.c: Worked around some buggy PSD savers
+	(suspect PS4 on Mac) - ugh.  + Fixed a bug when loading layer
+	masks of certain dimensions.
+
 Tue Jul 28 18:10:33 1998  Scott Goehring  <scott@poverty.bloomington.in.us>
 
 	* tile_manager.c, tile_manager.h: provided some encapsulations
